contact changes
